Removed empty spec files and fixed JQuery UI layout bug :

--- a/grails-app/assets/stylesheets/modules/_pathway.less
+++ b/grails-app/assets/stylesheets/modules/_pathway.less
@@ -90,13 +90,6 @@
     color: #ffffff;
   }
 
-  #model-panel, #properties-panel, #tree-panel, #header-panel {
-    border: 1px solid @mc-colour-1-lightest;
-    background-color: white;
-    padding: 10px;
-    margin: 2px;
-  }
-
   .canvas {
     width: 3000px;
     height: 3000px;
@@ -106,10 +99,6 @@
     .graph-paper
   }
 
-  #pathwayName {
-    font-size: 20px;
-    margin-top: -2px;
-  }
 
   #formDesignCart, #deCollectionCart, #collectionCart {
     height: 50px;
